--- a/OrDragon/OrDragon/Web.config
+++ b/OrDragon/OrDragon/Web.config
@@ -9,6 +9,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="DB_Username" value="LESDIEUXGREC" />
+    <add key="DB_Password" value="SoccerSuck" />
+    <add key="DB_Hostname" value="mercure.clg.qc.ca" />
+    <add key="DB_Port" value="1521" />
+    <add key="DB_ServiceName" value="ORCL.clg.qc.ca" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
