--- a/OrDragon/OrDragon/packages.config
+++ b/OrDragon/OrDragon/packages.config
@@ -27,6 +27,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="odp.net.x64" version="112.3.20" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess" version="12.1.24160419" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
