--- a/OrDragon/OrDragon/packages.config
+++ b/OrDragon/OrDragon/packages.config
@@ -16,6 +16,10 @@
   <package id="Microsoft.AspNet.Mvc.fr" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor.fr" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization.fr" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
@@ -23,11 +27,15 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="odp.net.x64" version="112.3.20" targetFramework="net45" />
   <package id="Oracle.ManagedDataAccess" version="12.1.24160419" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
