--- a/OrDragon/OrDragon/packages.config
+++ b/OrDragon/OrDragon/packages.config
@@ -18,6 +18,8 @@
   <package id="Microsoft.AspNet.Razor.fr" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core.fr" version="2.0.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.fr" version="2.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
@@ -28,8 +30,11 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.fr" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb.fr" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.fr" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
