--- a/OrDragon/OrDragon/OrDragon.csproj
+++ b/OrDragon/OrDragon/OrDragon.csproj
@@ -248,6 +248,7 @@
     <Content Include="Views\User\Register.cshtml" />
     <Content Include="Views\Shared\_Modal.cshtml" />
     <Content Include="Views\Question\index.cshtml" />
+    <Content Include="Views\Question\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
