--- a/OrDragon/OrDragon/packages.config
+++ b/OrDragon/OrDragon/packages.config
@@ -18,7 +18,7 @@
   <package id="Microsoft.AspNet.Razor.fr" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core.fr" version="2.0.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core.fr" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.fr" version="2.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.0" targetFramework="net45" />
@@ -39,6 +39,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="odp.net.x64" version="112.3.20" targetFramework="net45" />
+  <package id="Oracle.DataAccess.x86" version="2.112.1.0" targetFramework="net45" />
   <package id="Oracle.ManagedDataAccess" version="12.1.24160419" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
